# claude-outline-connector

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  upload-github-secrets.sh
.claude/: settings.json
.github/workflows/: deploy-production.yml
skills/custom-mcp-connector/: SKILL.md
skills/custom-mcp-connector/references/: server-template.py
src/figma_mcp/: server.py
src/github_mcp/: server.py
src/outline_mcp/: server.py
