[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "outline-mcp"
version = "0.1.0"
description = "Remote MCP server proxying Claude to a self-hosted Outline wiki"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "starlette>=0.41.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/outline_mcp", "src/github_mcp", "src/figma_mcp"]
